--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Diệp Tiến
 description: Dành cho tương lai
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.facebook.com/tien.diep.167
+avatar: https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-9/15056451_977895525648700_805096698271831410_n.jpg?oh=8faef9c743548a4090d956da83554d6a&oe=597E5283
 
 #
 # Flags below are optional
@@ -19,14 +19,14 @@ avatar: https://www.facebook.com/tien.diep.167
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook:tien.diep.167
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
