--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Diệp Tiến
 
 # Short bio or description (displayed in the header)
-description: Dành cho tương lai
+description: Dành cho tương lai phịc
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-9/15056451_977895525648700_805096698271831410_n.jpg?oh=8faef9c743548a4090d956da83554d6a&oe=597E5283
