--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-9/15056451_977895525648700
 footer-links:
   dribbble:
   email:
-  facebook:https://www.facebook.com/tien.diep.167
+  facebook:
   flickr:
   github: 
   instagram:
