--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-9/15056451_977895525648700
 footer-links:
   dribbble:
   email:
-  facebook:https://www.facebook.com/tien.diep.167?viewas=100000686899395&privacy_source=timeline_gear_menu
+  facebook:
   flickr:
   github: 
   instagram:
