--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ avatar: https://scontent.fhan2-2.fna.fbcdn.net/v/t1.0-9/15056451_977895525648700
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:dmatttqd@gmail.com
+  email:
   facebook:tiendiep167
   flickr:
   github: 
